Fix JBang compat
Signed-off-by: Fred Bricon <fbricon@gmail.com>